# FingerCoaster

./: .gitignore  README.md
.github/workflows/: app.yaml
FingerCoaster/: .gitignore  CMakeLists.txt  FingerCoaster.7648bc5  FingerCoaster.pro  FingerCoaster.pro.user.67b34e3  Makefile  Result.hpp  Scoreboard.cpp  Scoreboard.hpp  createroom.ui  enterusername.cpp  enterusername.h  enterusername.ui  gameEngine.cpp  gameEngine.h  gamedialog.ui  gamewindow.ui  joinpopup.cpp  joinpopup.h  joinpopup.ui  lobby.ui  main.cpp  mainMenu.cpp  mainMenu.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  menuBtn.cpp  res.qrc  scoreboard.cpp  scoreboard.ui
FingerCoaster/ClassTests/: Makefile  ResultTests.cpp  ScoreboardTests.cpp
FingerCoaster/Client/: CMakeLists.txt  Client.cpp  Client.cpp.orig  Client.hpp  Client.pro  ClientTests.cpp  main.cpp
FingerCoaster/Forms/: gamedialog.ui  scoreboard.ui
FingerCoaster/Game/: game.cpp  game.h  gameDialog.cpp  gameDialog.h  gamewindow.h
FingerCoaster/Headers/: Result.hpp  ScoreboardBackend.hpp  Storage.hpp  configuration.h  createroom.h  enterusername.h  game.h  gameDialog.h  gameEngine.h  joinpopup.h  lobby.h  mainMenu.h  mainwindow.h  map.h  menuBtn.h  scoreboard.h  storage.h
FingerCoaster/Result/: CMakeLists.txt  Result.hpp  ResultTests.cpp
FingerCoaster/SavedFiles/: catch.hpp  scoreboard.txt
FingerCoaster/SavedFiles/Texts/: easy1.txt  easy2.txt  easy3.txt  hard1.txt  hard2.txt  hard3.txt  medium1.txt  medium2.txt  medium3.txt  textLicence.txt
FingerCoaster/Scoreboard/: CMakeLists.txt  Scoreboard.cpp  Scoreboard.hpp  ScoreboardBackend.cpp  ScoreboardBackend.hpp  ScoreboardBackendTests.cpp  ScoreboardTests.cpp
FingerCoaster/Server/: CMakeLists.txt  Server.cpp  Server.cpp.orig  Server.hpp  Server.hpp.orig  Server.pro  Server.pro.orig  ServerTests.cpp  Thread.cpp  Thread.h  Thread.h.orig
FingerCoaster/Server/Server/: Server.cpp  Server.hpp  Server.pro  Thread.cpp  Thread.h  main.cpp
FingerCoaster/Sources/: MainMenu.cpp  gameEngine.cpp  main.cpp  mainMenu.cpp  mainwindow.cpp  menuBtn.cpp
FingerCoaster/Src/: ScoreboardBackend.cpp  Storage.cpp  createroom.cpp  enterusername.cpp  game.cpp  gameDialog.cpp  gameEngine.cpp  joinpopup.cpp  lobby.cpp  main.cpp  mainMenu.cpp  mainwindow.cpp  map.cpp  menuBtn.cpp  scoreboard.cpp  scoreboardModernize.txt  storage.cpp
FingerCoaster/Storage/: CMakeLists.txt  Storage.cpp  Storage.hpp  StorageTests.cpp
Specifikacija/: ConnectWithLobbyUseCase  DrugiDeoSpecifikacije.docx  FC-Scoreboard_and_Update_Scoreboard.txt  SD-CreateAndOpenLobby.txt
build-FingerCoaster-Desktop_Qt_6_2_2_GCC_64bit-Debug/: Makefile  moc_Client.cpp  moc_Server.cpp  moc_Thread.cpp  moc_createroom.cpp  moc_enterusername.cpp  moc_gameEngine.cpp  moc_joinpopup.cpp  moc_mainwindow.cpp  moc_scoreboard.cpp  qrc_res.cpp  ui_createroom.h  ui_enterusername.h  ui_joinpopup.h  ui_mainwindow.h  ui_scoreboard.h
